<?xml version="1.0" encoding="utf-8"?>
<!--used for data binding-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="theUser"
            type="com.example.aboutme.myClasses.User" />
    </data>

<!--    the main layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me_application"
            android:textAlignment="center"
            android:textSize="30sp" />

        <!--    name field-->
        <EditText
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/what_is_your_name"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>

        <!--    nickname is the same name-->
        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            android:text="@{theUser.name}"/>


        <EditText
            android:id="@+id/ageField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_age"
            android:inputType="number" />

        <!--    done button-->
        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_about_me"
            />

<!--        scroll view-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            the content-->
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/content_about_me"
                android:textSize="20sp" />
        </ScrollView>

    </LinearLayout>
</layout>